--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-scripts": "4.0.0",
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^2.0.0",
+    "truffle-hdwallet-provider-privkey": "^0.3.0",
     "web-vitals": "^0.2.4",
     "web3": "1.2.9"
   },
