--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-    "solidity.compileUsingRemoteVersion": "v0.5.16+commit.9c3226ce"
+    "solidity.compileUsingRemoteVersion": "v0.6.4-nightly.2020.3.9+commit.dbe2a5f4"
 }
