--- a/package.json
+++ b/package.json
@@ -7,11 +7,13 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "@truffle/hdwallet-provider": "^1.1.1",
+    "global": "^4.4.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.0",
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^2.0.0",
+    "solc": "0.6.4",
     "truffle-hdwallet-provider-privkey": "^0.3.0",
     "web-vitals": "^0.2.4",
     "web3": "1.2.9"
